#cmake_minimum_required(VERSION 3.2)
cmake_minimum_required(VERSION 2.8)

SET(CSD_MAINTENANCE_SOURCE
${PROJECT_SOURCE_DIR}
)

SET(CSD_MAINTENANCE_BINARY_DIR
${PROJECT_BINARY_DIR}
)

MESSAGE (STATUS "CSD_MAINTENANCE_BINARY_DIR is " ${CSD_MAINTENANCE_BINARY_DIR})

#也可以通过下面修改
#cmake .. -DCMAKE_INSTALL_PREFIX=/opt/ali
SET(CMAKE_INSTALL_PREFIX
/opt/ali)

ADD_SUBDIRECTORY(libs)
ADD_SUBDIRECTORY(apps)